--- a/help.html
+++ b/help.html
@@ -31,24 +31,24 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
-                            target="_self" aria-label="this link sends you to the home page">HOME</a>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                                aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the basics page">BASICS</a>
+                                target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
+                                target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the models page">MODELS</a>
+                                target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the help page">HELP</a>
+                                target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
                 </nav>
@@ -63,49 +63,68 @@
         <div class="container text-white text-shadow flex flex-center">
             <h1><span>HELP</span> for common errors</h1>
         </div>
-        <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg" alt="the top shape divider">
+        <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg"
+            alt="the top shape divider">
     </section>
 
     <!--CONTENT SECTION START-->
     <main>
-    <section class="section-full flex flex-center section-padding--bottom">
-    <div class="container flex flex-column flex-column--mobile">
-        <h2 class="margin-top--l"><span>HELP </span>is on the way!</h2>
-            <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-clogged-nozzle-mobile.jpg">
-                <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-clogged-nozzle-mobile.jpg">
-                <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-clogged-nozzle-mobile.jpg">
-                <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-clogged-nozzle.jpg" alt="this should be a printhead">
-            </picture>
-            <article class="margin-top--l margin-bottom--l">
-                <h3 class="margin-bottom--s"><span>CLOGGED </span>nozzles</h3>
-                <p>While printing a model there are a few errors which can occur while printing. The most common one is the clogged nozzle. You can identify the error by hearing a loud clicking sound from the printers nozzle.
-                    This means, that something is blocking the way for the molten plastic to come out of the nozzle. This can be resolved by changing the old nozzle for a new one followed by heating up the clogged nozzle and cleaning it.
-                </p>
-            </article>
-            <article>
-                <h3 class="margin-bottom--s"><span>BED </span>is not level</h3>
-                <p>One of the most crucial parts is the bed leveling. If your printbed is not levelled correctly (this means it is perpendicular to the nozzle) it can lead to a few errors ranging from
-                    too wide or narrow lines (messes up the models dimension) or the molten plastic not coming out at all. The best solution here is to pay extreme attention to how you level your bed. Some printers have inbuilt routines to do that and some printers can also do it automatically.
-                </p>
-            </article>
-            <picture class="flex flex-center margin-bottom--l">
-                <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-my-model-mobile.jpg">
-                <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-my-model-mobile.jpg">
-                <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-my-model-mobile.jpg">
-                <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-my-model.jpg" alt="this should be a printhead">
-            </picture>
-            <article>
-                <h3 class="margin-bottom--s"><span>MY MODEL</span> disappears in the slicer</h3>
-                <p>This is an easy one. When the 3D model doesnt appear in the slicer, it usually has to do with flipped normals. You can fix that easily by recalculating the normals in your modeling software.</p>
-            </article>
-            <div class="button-wrapper-bottom margin-top--l flex flex-row flex-center">
-                <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever" aria-label="this links to the basics page" rel="noopener" target="_self">
-                BACK - THANKS FOR READING!
-                </a>
-        </div>  
-    </div>
-    </section>
+        <section class="section-full flex flex-center section-padding--bottom">
+            <div class="container flex flex-column flex-column--mobile">
+                <h2 class="margin-top--l"><span>HELP </span>is on the way!</h2>
+                <picture class="flex flex-center">
+                    <source media="(max-width: 375px)"
+                        srcset="assets/img/content-images/fab-forever-clogged-nozzle-mobile.jpg">
+                    <source media="(max-width: 576px)"
+                        srcset="assets/img/content-images/fab-forever-clogged-nozzle-mobile.jpg">
+                    <source media="(max-width: 768px)"
+                        srcset="assets/img/content-images/fab-forever-clogged-nozzle-mobile.jpg">
+                    <img class="printhead rounded margin-top--l"
+                        src="assets/img/content-images/fab-forever-clogged-nozzle.jpg" alt="this should be a printhead">
+                </picture>
+                <article class="margin-top--l margin-bottom--l">
+                    <h3 class="margin-bottom--s"><span>CLOGGED </span>nozzles</h3>
+                    <p>While printing a model there are a few errors which can occur while printing. The most common one
+                        is the clogged nozzle. You can identify the error by hearing a loud clicking sound from the
+                        printers nozzle.
+                        This means, that something is blocking the way for the molten plastic to come out of the nozzle.
+                        This can be resolved by changing the old nozzle for a new one followed by heating up the clogged
+                        nozzle and cleaning it.
+                    </p>
+                </article>
+                <article>
+                    <h3 class="margin-bottom--s"><span>BED </span>is not level</h3>
+                    <p>One of the most crucial parts is the bed leveling. If your printbed is not levelled correctly
+                        (this means it is perpendicular to the nozzle) it can lead to a few errors ranging from
+                        too wide or narrow lines (messes up the models dimension) or the molten plastic not coming out
+                        at all. The best solution here is to pay extreme attention to how you level your bed. Some
+                        printers have inbuilt routines to do that and some printers can also do it automatically.
+                    </p>
+                </article>
+                <picture class="flex flex-center margin-bottom--l">
+                    <source media="(max-width: 375px)"
+                        srcset="assets/img/content-images/fab-forever-my-model-mobile.jpg">
+                    <source media="(max-width: 576px)"
+                        srcset="assets/img/content-images/fab-forever-my-model-mobile.jpg">
+                    <source media="(max-width: 768px)"
+                        srcset="assets/img/content-images/fab-forever-my-model-mobile.jpg">
+                    <img class="printhead rounded margin-top--l"
+                        src="assets/img/content-images/fab-forever-my-model.jpg" alt="this should be a printhead">
+                </picture>
+                <article>
+                    <h3 class="margin-bottom--s"><span>MY MODEL</span> disappears in the slicer</h3>
+                    <p>This is an easy one. When the 3D model doesnt appear in the slicer, it usually has to do with
+                        flipped normals. You can fix that easily by recalculating the normals in your modeling software.
+                    </p>
+                </article>
+                <div class="button-wrapper-bottom margin-top--l flex flex-row flex-center">
+                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever"
+                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        BACK - THANKS FOR READING!
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!--FOOTER START-->
@@ -127,8 +146,8 @@
                         aria-label="this link sends you to twitter"><img class="social-icon"
                             src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/svg/slack.svg"
-                            alt="the slack logo"></a>
+                        aria-label="this link sends you to slack"><img class="social-icon"
+                            src="assets/img/svg/slack.svg" alt="the slack logo"></a>
                 </div>
             </div>
         </div>
@@ -139,4 +158,5 @@
 
     <script src="assets/js/mobile-menu.js"></script>
 </body>
+
 </html>
