--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <div class="column-2 full-row flex flex-between flex-center--y">
                 <a href="https://rebellionwebdesign.github.io/fab-forever"
                     aria-label="the logo sends you back to the homepage">
-                    <img class="headerbar__logo" src="assets/img/svg/fab-forever-logo.svg"
-                        alt="the fab forever logo">
+                    <img class="headerbar__logo" src="assets/img/svg/fab-forever-logo.svg" alt="the fab forever logo">
                 </a>
                 <img class="mobile--open" src="assets/img/svg/bars-solid.svg" alt="this should be an open icon">
             </div>
@@ -31,24 +30,24 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
-                            target="_self" aria-label="this link sends you to the home page">HOME</a>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                                aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the basics page">BASICS</a>
+                                target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
+                                target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the models page">MODELS</a>
+                                target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the help page">HELP</a>
+                                target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
                 </nav>
@@ -60,7 +59,8 @@
         <!--HERO SECTION START-->
         <section class="section-full background-mask flex flex-center">
             <div class="container flex flex-column-reverse-mobile flex-center--y">
-                <div class="column-2 column-2-mobile flex flex-column flex-column-mobile text-center-mobile margin-top-l-mobile">
+                <div
+                    class="column-2 column-2-mobile flex flex-column flex-column-mobile text-center-mobile margin-top-l-mobile">
                     <h1><span>NEW</span> to 3D Printing?</h1>
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
                     <div class="button-wrapper">
@@ -71,7 +71,8 @@
                     </div>
                 </div>
                 <div class="column-2 column-2-mobile flex flex-end flex-center-x-mobile">
-                    <img class="hero-image" src="assets/img/svg/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
+                    <img class="hero-image" src="assets/img/svg/hero-section-3d-printer-illustration.svg"
+                        alt="an image of a 3d printer">
                 </div>
             </div>
         </section>
@@ -80,7 +81,8 @@
         <!--ABOUT SECTION START-->
         <section class="section-full background-reverse flex flex-center flex-column flex-between">
             <img class="flip-x divider" src="assets/img/svg/shape-divider-top.svg" alt="the top shape divider">
-            <div class="container flex flex-row flex-center--y flex-column-mobile text-center-mobile container-padding-mobile">
+            <div
+                class="container flex flex-row flex-center--y flex-column-mobile text-center-mobile container-padding-mobile">
                 <div class="column-2 column-2-mobile text-white text-shadow">
                     <h2><span>3D</span>Printing resources for you!</h2>
                     <p class="margin-top--s">Discover how we can help you with getting on track in your 3D printing
@@ -105,14 +107,14 @@
                     </div>
                 </div>
             </div>
-            <img class="divider" src="assets/img/svg/shape-divider-bottom.svg"
-                alt="the bottom shape divider">
+            <img class="divider" src="assets/img/svg/shape-divider-bottom.svg" alt="the bottom shape divider">
         </section>
         <!--ABOUT SECTION END-->
 
         <!--TESTIMONIAL SECTION START-->
         <section class="section-half flex flex-center">
-            <div class="container flex flex-center flex-row text-center-mobile flex-column-mobile container-padding-mobile">
+            <div
+                class="container flex flex-center flex-row text-center-mobile flex-column-mobile container-padding-mobile">
                 <div class="column-2 column-2-mobile flex-order-mobile">
                     <h2 class="text-shadow"><span>HOW</span> we help people</h2>
                 </div>
@@ -120,7 +122,8 @@
                     class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-row flex-column-mobile">
                     <img src="assets/img/testimonial-slider-asian-dude.png" alt="this should be a persons image">
                     <div>
-                        <p class="testimonial-text margin-top-l-mobile">"Jeez. This got me up and running for a job interview!"</p>
+                        <p class="testimonial-text margin-top-l-mobile">"Jeez. This got me up and running for a job
+                            interview!"</p>
                         <p><em>Kaneda Yamagata - CTO MeshBash</em></p>
                     </div>
                 </div>
@@ -147,8 +150,8 @@
                         <label for="lname">Your last name <span class="red-star">*</span></label>
                         <input type="text" id="lname" name="lname" aria-label="Put your last name in here" required>
                         <label for="email">Your eMail address <span class="red-star">*</span></label>
-                        <input type="email" id="email" name="email" aria-label="Put your email address in here" autocomplete="email"
-                            required>
+                        <input type="email" id="email" name="email" aria-label="Put your email address in here"
+                            autocomplete="email" required>
                         <div class="legal-wrapper">
                             <p class="legal-text">with <span class="red-star">*</span> marked fields are mandatory</p>
                         </div>
@@ -181,8 +184,8 @@
                         aria-label="this link sends you to twitter"><img class="social-icon"
                             src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/svg/slack.svg"
-                            alt="the slack logo"></a>
+                        aria-label="this link sends you to slack"><img class="social-icon"
+                            src="assets/img/svg/slack.svg" alt="the slack logo"></a>
                 </div>
             </div>
         </div>
