--- a/materials.html
+++ b/materials.html
@@ -132,13 +132,17 @@
                     </p>
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
-                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria-label="this links to the basics page" rel="noopener" target="_self">
-                    BACK
-                </a>
-                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/models.html" aria-label="this links to the basics page" rel="noopener" target="_self">
-                    NEXT
-                </a>
-            </div>  
+                    <a class="page-button text-white"
+                        href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        BACK
+                    </a>
+                    <a class="page-button text-white"
+                        href="https://rebellionwebdesign.github.io/fab-forever/models.html"
+                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        NEXT
+                    </a>
+                </div>
             </div>
         </section>
     </main>
