--- a/models.html
+++ b/models.html
@@ -31,24 +31,24 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
-                            target="_self" aria-label="this link sends you to the home page">HOME</a>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                                aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the basics page">BASICS</a>
+                                target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
+                                target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the models page">MODELS</a>
+                                target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the help page">HELP</a>
+                                target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
                 </nav>
@@ -63,52 +63,69 @@
         <div class="container container-mobile text-white text-shadow flex flex-center">
             <h1><span>MODELS</span> for 3D Printing</h1>
         </div>
-        <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg" alt="the top shape divider">
+        <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg"
+            alt="the top shape divider">
     </section>
 
     <!--CONTENT SECTION START-->
     <main>
-    <section class="section-full flex flex-center flex-column section-padding--bottom">
-    <div class="container container--mobile">
-        <h2 class="margin-top--l"><span>You</span> can model too!</h2>
-            <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
-                <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
-                <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
-                <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-octocat.jpg" alt="this should be a printd 3d model">
-            </picture>
-            <article class="margin-top--l margin-bottom--l">
-                <h3 class="margin-bottom--s"><span>WHAT </span>are 3D Printing models?</h3>
-                <p>A 3D model represents geometry in 3D space. It is defined by vertices, edges and faces and also their position in 3D space (X, Y and Z axis). The most common file type for 3D printers is the STL (STereoLithography) file format and can be exported from a variety of softwares.
-                </p>
-            </article>
-            <article>
-                <h3 class="margin-bottom--s"><span>HOW </span>can I make them?</h3>
-                <p>3D models are made with CAD programs like Fusion360 or Moi3D. There is a learning curve to these type of programs nut fortunately it is not very steep, depending on what you need to do.
-                </p>
-            </article>
-            <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
-                <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
-                <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
-                <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-3d-desk.jpg" alt="this should be a table">
-            </picture>
-            <article class="margin-top--l margin-bottom--l">
-                <h3 class="margin-bottom--s"><span>WHERE</span> can I get them? - I am no designer</h3>
-                <p>Getting hold of 3D models is not very hard. There are plenty of sites in the internet which provide them. The most popular site is Thingiverse, but there are also other sites like
-                    Cults or CGTrader. You can search for what you need there, but be aware that some models need to be paid.
-                </p>
-            </article>
-            <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
-                <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" aria-label="this links to the basics page" rel="noopener" target="_self">
-                BACK
-            </a>
-                <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/help.html" aria-label="this links to the basics page" rel="noopener" target="_self">
-                NEXT
-            </a>
-        </div>  
-    </div>
-    </section>
+        <section class="section-full flex flex-center flex-column section-padding--bottom">
+            <div class="container container--mobile">
+                <h2 class="margin-top--l"><span>You</span> can model too!</h2>
+                <picture class="flex flex-center">
+                    <source media="(max-width: 375px)"
+                        srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
+                    <source media="(max-width: 576px)"
+                        srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
+                    <source media="(max-width: 768px)"
+                        srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
+                    <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-octocat.jpg"
+                        alt="this should be a printd 3d model">
+                </picture>
+                <article class="margin-top--l margin-bottom--l">
+                    <h3 class="margin-bottom--s"><span>WHAT </span>are 3D Printing models?</h3>
+                    <p>A 3D model represents geometry in 3D space. It is defined by vertices, edges and faces and also
+                        their position in 3D space (X, Y and Z axis). The most common file type for 3D printers is the
+                        STL (STereoLithography) file format and can be exported from a variety of softwares.
+                    </p>
+                </article>
+                <article>
+                    <h3 class="margin-bottom--s"><span>HOW </span>can I make them?</h3>
+                    <p>3D models are made with CAD programs like Fusion360 or Moi3D. There is a learning curve to these
+                        type of programs nut fortunately it is not very steep, depending on what you need to do.
+                    </p>
+                </article>
+                <picture class="flex flex-center">
+                    <source media="(max-width: 375px)"
+                        srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
+                    <source media="(max-width: 576px)"
+                        srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
+                    <source media="(max-width: 768px)"
+                        srcset="assets/img/content-images/fab-forever-3d-desk-mobile.jpg">
+                    <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-3d-desk.jpg"
+                        alt="this should be a table">
+                </picture>
+                <article class="margin-top--l margin-bottom--l">
+                    <h3 class="margin-bottom--s"><span>WHERE</span> can I get them? - I am no designer</h3>
+                    <p>Getting hold of 3D models is not very hard. There are plenty of sites in the internet which
+                        provide them. The most popular site is Thingiverse, but there are also other sites like
+                        Cults or CGTrader. You can search for what you need there, but be aware that some models need to
+                        be paid.
+                    </p>
+                </article>
+                <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
+                    <a class="page-button text-white"
+                        href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
+                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        BACK
+                    </a>
+                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/help.html"
+                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        NEXT
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!--FOOTER START-->
@@ -130,8 +147,8 @@
                         aria-label="this link sends you to twitter"><img class="social-icon"
                             src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/svg/slack.svg"
-                            alt="the slack logo"></a>
+                        aria-label="this link sends you to slack"><img class="social-icon"
+                            src="assets/img/svg/slack.svg" alt="the slack logo"></a>
                 </div>
             </div>
         </div>
@@ -142,4 +159,5 @@
 
     <script src="assets/js/mobile-menu.js"></script>
 </body>
+
 </html>
