--- a/basics.html
+++ b/basics.html
@@ -31,24 +31,24 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener"
-                            target="_self" aria-label="this link sends you to the home page">HOME</a>
+                            <a href="https://rebellionwebdesign.github.io/fab-forever" rel="noopener" target="_self"
+                                aria-label="this link sends you to the home page">HOME</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the basics page">BASICS</a>
+                                target="_self" aria-label="this link sends you to the basics page">BASICS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
+                                target="_self" aria-label="this link sends you to the materials page">MATERIALS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the models page">MODELS</a>
+                                target="_self" aria-label="this link sends you to the models page">MODELS</a>
                         </li>
                         <li>
                             <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
-                            target="_self" aria-label="this link sends you to the help page">HELP</a>
+                                target="_self" aria-label="this link sends you to the help page">HELP</a>
                         </li>
                     </ul>
                 </nav>
@@ -63,63 +63,95 @@
         <div class="container flex flex-center text-white text-shadow">
             <h1><span>BASICS</span> of 3D Printing</h1>
         </div>
-        <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg" alt="the top shape divider">
+        <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg"
+            alt="the top shape divider">
     </section>
 
     <!--CONTENT SECTION START-->
-<main>
-    <section class="section-full flex flex-center flex-column section-padding--bottom">
-    <div class="container flex flex-column">
-        <h2 class="margin-top--l"><span>LETS </span>start simple</h2>
-            <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-printhead-mobile.jpg">
-                <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-printhead-mobile.jpg">
-                <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-printhead-mobile.jpg">
-                <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-printhead.jpg" alt="this should be a printhead">
-            </picture>
-            <article class="margin-top--l margin-bottom--l">
-                <h3 class="margin-bottom--s"><span>WHAT </span>is 3D Printing?</h3>
-                <p>3D printing is the process of creating real world objects made of plastics. While 3D printing is the most commonly used term, there are other terms used in industrial engineering, which refer to rapid prototyping or additive manufacturing. Also, there are different processing types too. For now, we will focus on FDM (Fused Deposition Modeling) Printers.<br><br> The process works by pushing a plastic filament through a heated nozzle in which it gets molten. The molten plastic is then reapplied in layers to the printbed shaping the desired object. The most important parts of a 3D printer are the printhead, which holds the hotend (nozzle and cooler) and the mechanics for transporting the filament (feeder), and the printbed.</p>
-            </article>
-            <article>
-                <h3 class="margin-bottom--s"><span>WHICH </span>3D Printers are there?</h3>
-                <p>There are plenty of different types of 3D Printers on the market. They can be organized into three categories: plug and play Printers, DIY Kits and RepRap (self built) Printers. The machines used here can also be sorted in different categories: cartesic Printers and delta Printers. While They do the same, the inner workings on the used coordinate system are different. Cartesic Printers use a rectangular printing bed with cartesic coordinates, while delta Printers usually have a circular bed and with polar coordinates.
-                </p>
-            </article>
-            <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-orange-print-mobile.jpg">
-                <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-orange-print-mobile.jpg">
-                <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-orange-print-mobile.jpg">
-                <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-orange-print.jpg" alt="this should be a printhead">
-            </picture>
-            <article class="margin-top--l margin-bottom--l">
-                <h3 class="margin-bottom--s"><span>HOW</span> can I use a 3D Printer?</h3>
-                <p>
-                    Using a 3d printer is only part of the complete process. To give you an overview we compiled together a nice flow diagram for you:
-                </p>
+    <main>
+        <section class="section-full flex flex-center flex-column section-padding--bottom">
+            <div class="container flex flex-column">
+                <h2 class="margin-top--l"><span>LETS </span>start simple</h2>
+                <picture class="flex flex-center">
+                    <source media="(max-width: 375px)"
+                        srcset="assets/img/content-images/fab-forever-printhead-mobile.jpg">
+                    <source media="(max-width: 576px)"
+                        srcset="assets/img/content-images/fab-forever-printhead-mobile.jpg">
+                    <source media="(max-width: 768px)"
+                        srcset="assets/img/content-images/fab-forever-printhead-mobile.jpg">
+                    <img class="printhead rounded margin-top--l"
+                        src="assets/img/content-images/fab-forever-printhead.jpg" alt="this should be a printhead">
+                </picture>
+                <article class="margin-top--l margin-bottom--l">
+                    <h3 class="margin-bottom--s"><span>WHAT </span>is 3D Printing?</h3>
+                    <p>3D printing is the process of creating real world objects made of plastics. While 3D printing is
+                        the most commonly used term, there are other terms used in industrial engineering, which refer
+                        to rapid prototyping or additive manufacturing. Also, there are different processing types too.
+                        For now, we will focus on FDM (Fused Deposition Modeling) Printers.<br><br> The process works by
+                        pushing a plastic filament through a heated nozzle in which it gets molten. The molten plastic
+                        is then reapplied in layers to the printbed shaping the desired object. The most important parts
+                        of a 3D printer are the printhead, which holds the hotend (nozzle and cooler) and the mechanics
+                        for transporting the filament (feeder), and the printbed.</p>
+                </article>
+                <article>
+                    <h3 class="margin-bottom--s"><span>WHICH </span>3D Printers are there?</h3>
+                    <p>There are plenty of different types of 3D Printers on the market. They can be organized into
+                        three categories: plug and play Printers, DIY Kits and RepRap (self built) Printers. The
+                        machines used here can also be sorted in different categories: cartesic Printers and delta
+                        Printers. While They do the same, the inner workings on the used coordinate system are
+                        different. Cartesic Printers use a rectangular printing bed with cartesic coordinates, while
+                        delta Printers usually have a circular bed and with polar coordinates.
+                    </p>
+                </article>
+                <picture class="flex flex-center">
+                    <source media="(max-width: 375px)"
+                        srcset="assets/img/content-images/fab-forever-orange-print-mobile.jpg">
+                    <source media="(max-width: 576px)"
+                        srcset="assets/img/content-images/fab-forever-orange-print-mobile.jpg">
+                    <source media="(max-width: 768px)"
+                        srcset="assets/img/content-images/fab-forever-orange-print-mobile.jpg">
+                    <img class="printhead rounded margin-top--l"
+                        src="assets/img/content-images/fab-forever-orange-print.jpg" alt="this should be a printhead">
+                </picture>
+                <article class="margin-top--l margin-bottom--l">
+                    <h3 class="margin-bottom--s"><span>HOW</span> can I use a 3D Printer?</h3>
+                    <p>
+                        Using a 3d printer is only part of the complete process. To give you an overview we compiled
+                        together a nice flow diagram for you:
+                    </p>
                     <picture class="flex flex-center margin-top--l">
-                        <source media="(max-width: 375px)" srcset="assets/img/content-images/fab-forever-3d-print-process-mobile.jpg">
-                        <source media="(max-width: 576px)" srcset="assets/img/content-images/fab-forever-3d-print-process-mobile.jpg">
-                        <source media="(max-width: 768px)" srcset="assets/img/content-images/fab-forever-3d-print-process-mobile.jpg">
-                        <img src="assets/img/content-images/fab-forever-3d-print-process.jpg" alt="this should be a flow diagram">
+                        <source media="(max-width: 375px)"
+                            srcset="assets/img/content-images/fab-forever-3d-print-process-mobile.jpg">
+                        <source media="(max-width: 576px)"
+                            srcset="assets/img/content-images/fab-forever-3d-print-process-mobile.jpg">
+                        <source media="(max-width: 768px)"
+                            srcset="assets/img/content-images/fab-forever-3d-print-process-mobile.jpg">
+                        <img src="assets/img/content-images/fab-forever-3d-print-process.jpg"
+                            alt="this should be a flow diagram">
                     </picture>
-            </article>
-            <article>
-                <h3 class="margin-bottom--s"><span>CAN</span> I build my own?</h3>
-                <p>Yes, definetly. Either through a DIY Kit, or by building a reprap printer from scratch. But keep in mind, that building one from scratch can be much more expensive than just buying one. This depends strongly on what you are planning to do with the machine. Below is a table which shows pros and contras of diy Printers versus buying a ready made one.</p>
-            </article>
-          <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
-        <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever" aria-label="this links to the basics page" rel="noopener" target="_self">
-        BACK
-    </a>
-        <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/materials.html" aria-label="this links to the basics page" rel="noopener" target="_self">
-        NEXT
-    </a>
-</div>  
-    </div>
-    
-    </section>
-</main>
+                </article>
+                <article>
+                    <h3 class="margin-bottom--s"><span>CAN</span> I build my own?</h3>
+                    <p>Yes, definetly. Either through a DIY Kit, or by building a reprap printer from scratch. But keep
+                        in mind, that building one from scratch can be much more expensive than just buying one. This
+                        depends strongly on what you are planning to do with the machine. Below is a table which shows
+                        pros and contras of diy Printers versus buying a ready made one.</p>
+                </article>
+                <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
+                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever"
+                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        BACK
+                    </a>
+                    <a class="page-button text-white"
+                        href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
+                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        NEXT
+                    </a>
+                </div>
+            </div>
+
+        </section>
+    </main>
 
     <!--FOOTER START-->
     <footer class="flex flex-center">
@@ -140,8 +172,8 @@
                         aria-label="this link sends you to twitter"><img class="social-icon"
                             src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/svg/slack.svg"
-                            alt="the slack logo"></a>
+                        aria-label="this link sends you to slack"><img class="social-icon"
+                            src="assets/img/svg/slack.svg" alt="the slack logo"></a>
                 </div>
             </div>
         </div>
@@ -152,4 +184,5 @@
 
     <script src="assets/js/mobile-menu.js"></script>
 </body>
+
 </html>
